--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -4,7 +4,7 @@
 .menu{
     width:300px;
     height:100vh;
-    background-color: $mainColor;
+    background-color: lightblue;
     position: fixed;
     top:0;
     right: -300px;
@@ -24,7 +24,7 @@
         padding: 0;
         list-style: none;
         font-size: 30px;
-        font-weight: 300;
+        font-weight: 400;
         color: white;
         width: 60%;
 
