--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -1,7 +1,7 @@
 @import "../../global.scss";
 
 .topbar{
-    background-color: white;
+    background-color: rgba(156, 153, 153, 0.171);
     color: $mainColor;
     width:100%;
     height: 72px;
@@ -66,7 +66,7 @@
         }
     }
   &.active{
-      background-color: $mainColor;
+      background-color: lightblue;
       color: white;
 
       .hamburger{
