--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -1,7 +1,7 @@
 @import "../../global.scss";
 
 .topbar{
-    background-color: rgba(156, 153, 153, 0.171);
+    background-color: rgb(37, 37, 37);
     color: $mainColor;
     width:100%;
     height: 72px;
